snapshots/syntax/library/functions/conversion/cverr/cverr_division_by_zero.snap
---
source: src/syntax/library/functions/conversion/cverr.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: ErrorStatement
      children:
        - kind: ErrorKeyword
          text: error
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: CVErr
        - kind: LeftParenthesis
          text: (
        - kind: IntegerLiteral
          text: "2007"
        - kind: RightParenthesis
          text: )
        - kind: Newline
          text: "\n"
